Fix checkboxes not rendering on Firefox Android
See https://github.com/c-w/boardgames/issues/8

--- a/src/frontend/boards/fitf/index.scss
+++ b/src/frontend/boards/fitf/index.scss
@@ -600,8 +600,10 @@ $black: #000;
   }
 
   &.android {
-    input[type="checkbox"] {
-      visibility: hidden;
+    .hand {
+      input[type="checkbox"] {
+        visibility: hidden;
+      }
     }
 
     .card {
